<resources>
<string name="app_name">MyHelloWorld</string>

<string name="helloText">Hello Everyone!!</string>
<string name="headerText">Roll Dice</string>
<string name="buttonText">ROLL</string>
<string name="playerName">Player 1</string>
<string name="rules">To pass is to roll a 7 or 11 on the come out roll.
        \n\nTo crap is to roll a 2, 3, or 12 on the come out roll.
        \n\nThe point is any value between 4 and 10 rolled on the come out.
        \n\nTo seven out is to roll a seven before rolling the point.
        \n\nTo pass is to roll a 7 or 11 on the come out roll.
        \n\nTo crap is to roll a 2, 3, or 12 on the come out roll.
        \n\nThe point is any value between 4 and 10 rolled on the come out.
        \n\nTo seven out is to roll a seven before rolling the point.
    </string>
<string name="updateBtn">UPDATE</string>
<string name="editPlayerName">Type name here</string>
</resources>